fixed elements that needed to be visible after user's input and class/id changed to be uniformed

--- a/assets/style.css
+++ b/assets/style.css
@@ -95,12 +95,8 @@ h2 {
 }
 
 /* changes mouse to pointer when you hover over the favorites button */
-.fa-regular {
+#favIcon:hover {
     cursor:pointer;
-}
-
-.hover-element {
-    cursor: pointer;
 }
 
 footer {
